hphp/test/slow/dv_array/hh-only1.php.expectf
Fatal error: varray and darray are only allowed in Hack files in %s/test/slow/dv_array/hh-only1.php on line 7
